# holm

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: checks.yml  linters-and-tests.yml  linters.yml  publish.yml  tests.yml
ai/: doc-guide.md
api/: index.html
application-components/: index.html
docs/: api.md  application-components.md  custom-applications.md  error-handling.md  file-system-based-routing.md  in-a-hurry.md  index.md  quick-start-guide.md  rendering-apis-with-htmx.md  security.md  utilities.md
docs/api/: holm.md  typing.md  utils.md
docs/guides/: actions-with-htmx.md  custom-applications.md  error-handling.md  forms.md  html-layout-default-slots.md  html-layout.md  html-multi-slot-layout.md  path-parameters.md  quick-start-guide.md  rendering-apis-with-htmx.md
error-handling/: index.html
examples/actions-with-htmx/: README.md  actions.py  page.py
examples/forms/: layout.py  page.py  todo_service.py
examples/html-layout/: README.md
examples/html-layout-default-slots/: README.md
examples/html-mutli-slot-layout/: README.md
examples/htmx/: README.md  api.py  layout.py  page.py
examples/minimal/: README.md  page.py
examples/path-parameters/: layout.py  page.py
examples/quick-start-guide/: README.md  layout.py  main.py
examples/rendering-apis-with-htmx/: README.md  api.py  layout.py  page.py
file-system-based-routing/: index.html
guides/actions-with-htmx/: index.html
guides/custom-applications/: index.html
guides/error-handling/: index.html
guides/forms/: index.html
guides/path-parameters/: index.html
guides/quick-start-guide/: index.html
guides/rendering-apis-with-htmx/: index.html
holm/: __init__.py  _model.py  app.py  fastapi.py  logging.py  typing.py  utils.py
holm/module_options/: _actions.py  _metadata.py  _submit_handler.py
holm/modules/: _api.py  _error.py  _layout.py  _metadata.py  _page.py  _utils.py
in-a-hurry/: index.html
quick-start-guide/: index.html
rendering-apis-with-htmx/: index.html
search/: search_index.json
security/: index.html
test_app/: actions.py  api.py  error.py  errors.py  layout.py  main.py  page.py
test_app/band/: api.py
test_app/calculator/: page.py
test_app/html_and_python_layout/: layout.html  (+2 more)
tests/: conftest.py  test_actions.py  test_page.py  test_private_package.py  test_url_for.py
utilities/: index.html
(+46 files in other folders)
